# JobAggregator

./: .gitignore  .pylintrc  README.md  main.py  pylintrc  setup.cfg  test.py
.github/workflows/: ci.yml
Llama3/: Llama3Model.py  lama_tomek.py  main.py  process_offer.py
ci/: static_requirements.txt
ci/jobs/: autopep8_ci.py  badge_generator.py  flake8_ci.py  isort_ci.py  pylint_ci.py
database/: MongoDB_MAnager.py
model/: NERTrainer.py
src/: main.py
textProcessing/: TextProcessor.py  html_cleaner.py
text_samples/: SamplesReader.py  html_cleaner.py
