[metadata]
name=JobAggregator
description=JobAggregator
long_description=file:README.md
version=0.1.0
requires-python=>=3.9


[isort]

skip=ci
combine_as_imports=1
include_trailing_comma=true

known_thirdparty_python=autopep8

# known_first_party=

sections=FUTURE,
         STDLIB,
         THIRDPARTY_PYTHON,
         THIRDPARTY,
         FIRSTPARTY,
         LOCALFOLDER

line_length=100
lines_after_imports=2
multi_line_output=3

use_parentheses=1


[flake8] # For Autopep8 && Flake8
exclude=.github,
        ci

max_line_length=100
max-complexity=20

select=C,
       C4, # flake8 error class
       F,  # pycodestyle plugin 
       E,
       W,  # bugbear plugin
       B,  # others
       S
       R
# per-file-ignores = 
ignore=W503,E402
# exclude =

